--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@
   --back-dark: rgba(47, 48, 58, 1);
 
   --back-gray: rgba(245, 244, 250, 1);
+
+  --back-card-white: rgba(238, 238, 238, 1);
 }
 
 body {
@@ -102,11 +104,18 @@ ul {
 }
 
 .hero-button {
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
   color: var(--white-text);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
 }
 
 /* Приемущества */
@@ -137,6 +146,19 @@ ul {
 /* Наша команда */
 .team-section {
   background-color: var(--back-gray);
+}
+
+.team-item {
+  background-color: #ffffff;
+  width: 270px;
+  height: 368px;
+  left: 518px;
+  top: 1636px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-header {
@@ -185,6 +207,7 @@ ul {
 
 .footer-contacts {
   color: var(--white-text-op60);
+  text-decoration: none;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -202,6 +225,7 @@ ul {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  border: none;
 }
 
 .filter-buttons:hover,
@@ -209,6 +233,14 @@ ul {
   background: #2196f3;
   color: #f5f4fa;
   box-shadow: 0px 4px 4px 0px 0, 0, 0, 0, 25;
+}
+
+.card-item {
+  background-color: var(--back-header-white);
+  width: 370px;
+  height: 404px;
+  left: 401px;
+  top: 711px;
 }
 
 .card-name {
